src/main/resources/sf-resource/SfClientPkgs/objects/MetadataLogInformation__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Retrieve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InActive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GetPackages</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BaseOrgId__c</fullName>
        <label>BaseOrgId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BaseOrgRefreshToken__c</fullName>
        <label>BaseOrgRefreshToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BaseOrgToken__c</fullName>
        <label>BaseOrgToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BaseOrgUrl__c</fullName>
        <label>BaseOrgUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationId__c</fullName>
        <label>OrganizationId</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceOrgRefreshToken__c</fullName>
        <label>SourceOrgRefreshToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceOrgToken__c</fullName>
        <label>SourceOrgToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceOrganizationURL__c</fullName>
        <label>SourceOrganizationURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TargetOrgRefreshToken__c</fullName>
        <label>TargetOrgRefreshToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetOrgTokenNonEncrypted__c</fullName>
        <label>TargetOrgTokenNonEncrypted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetOrgToken__c</fullName>
        <label>TargetOrgToken</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>MetadataLogInformation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MDI-{0000000000}</displayFormat>
        <label>MetadataLog</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MetadataLogInformations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>